QTextStream: Fix logical error in setEncoding

We only want to enable writing BOM if we have _not_ started
writing.

Fixes: QTBUG-106279
Change-Id: Ibcbc101b931615fddb2507f01307bf9619772d7b
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit c76f7cbbcbe68bf785e8d8cbbe641cd6c0e42834)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>